--- a/index.html
+++ b/index.html
@@ -1,4 +1,11 @@
-<h1>Titulo de pagina</h1>
-<p>Cuerpo de pagina para futuras pruebas</p>
-<p><img src="https://i.pinimg.com/originals/38/0e/b2/380eb2453461a991439b50595a03363c.jpg" /></p>
-
+<!DOCTYPE html>
+<html lang="en"dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Dibuja con solo el mouse o tu dedo</title>
+  </head>
+  <body>
+    <canvas width="400"height="600"id= "canvas_cito"></canvas>
+    <script src="laweafea2.js"charset="utf-8"></script>
+  </body>
+</html>
